fix: update to echo swagger
